--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-API_KEY=supersecret-dev-key
-PORT=8080
-DB_PATH=./data/moods.db
-CORS_ORIGIN=*
+PORT=3000
+API_KEY=replace-with-strong-random-string
+
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=yourpassword
+DB_NAME=mood_db
+NODE_ENV=development
